fix: fix transceiver display overflow

--- a/css/transceptor.css
+++ b/css/transceptor.css
@@ -19,25 +19,29 @@
     #transceptor-top-panel {
         display: grid;
         place-content: center;
+        display: block;
 
         #transceptor-display {
             background-color: rgb(0, 0, 0);
             font-family: 'Courier New', Courier, monospace;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: inset 3px 3px 10px rgba(0,0,0,0.5), 0 0 15px rgba(139, 224, 78, 0.2);
-            border: 3px solid #111;
-            font-family: 'Courier New', Courier, monospace;
             color: #848484;
-
+            border-radius: 8px;
+            border: 3px solid #111;
+            width: 100%;
+            height: 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0% 5%;
+            box-shadow: inset 3px 3px 10px rgba(0,0,0,0.5), 0 0 15px rgba(139, 224, 78, 0.2);
+            
             #transceptor-freq {
-                font-size: 5cqw;
+                font-size: 4vw;
             }
 
             #transceptor-freq-unit {
-                font-size: 2cqw;
+                font-size: 2vw;
             }
-
         }
     }
 
